# ChangeLog for sys-apps/kexec-tools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/kexec-tools/ChangeLog,v 1.32 2010/03/28 04:01:58 darkside Exp $

  28 Mar 2010; Jeremy Olexa <darkside@gentoo.org> metadata.xml:
  Drop myself from metadata, add maintainer-needed

*kexec-tools-2.0.1 (10 Jan 2010)

  10 Jan 2010; Robin H. Johnson <robbat2@gentoo.org>
  +kexec-tools-2.0.1.ebuild:
  Bug #293663: version bump.

  20 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  -files/kexec-tools-1.101-LDFLAGS.patch,
  -files/kexec-tools-1.101-ppc64.patch,
  -files/kexec-tools-1.101-respect-LDFLAGS.patch,
  -files/kexec-linux-headers.patch:
  remove old patches

*kexec-tools-2.0.0-r2 (12 Apr 2009)

  12 Apr 2009; Jeremy Olexa <darkside@gentoo.org> files/kexec.init,
  -kexec-tools-1.101-r4.ebuild, -kexec-tools-1.101-r7.ebuild,
  +kexec-tools-2.0.0-r2.ebuild:
  revision bump to force installation of a new init script that is compatible
  with openrc-0.4.3. Stable users need not upgrade but can without issues

  22 Mar 2009; Markus Meier <maekke@gentoo.org> kexec-tools-2.0.0-r1.ebuild:
  amd64/x86 stable, bug #260092

  25 Jan 2009; Jeremy Olexa <darkside@gentoo.org>
  files/kexec-tools-2.0.0-respect-LDFLAGS.patch:
  Update patch, submitted by Arfrever Frehtes Taifersar Arahesis, bug 256135

*kexec-tools-2.0.0-r1 (25 Jan 2009)

  25 Jan 2009; Jeremy Olexa <darkside@gentoo.org>
  +files/kexec-tools-2.0.0-respect-LDFLAGS.patch, -kexec-tools-2.0.0.ebuild,
  +kexec-tools-2.0.0-r1.ebuild:
  Add patch to respect LDFLAGS in kdump

*kexec-tools-2.0.0 (23 Jan 2009)

  23 Jan 2009; Jeremy Olexa <darkside@gentoo.org>
  +files/kexec-tools-2.0.0-asneeded.patch, metadata.xml,
  +kexec-tools-2.0.0.ebuild, kexec-tools-9999.ebuild:
  Version bump to 2.0.0 and allign -9999 ebuild with 2.0.0 (style changes).
  New use flag to disable extended xen support if desired.

*kexec-tools-1.101-r7 (22 Jan 2009)
