@@ -2,11 +2,8 @@ AUX kexec-tools-2.0.0-asneeded.patch 649 RMD160 e4686dbdd2acb6713499553b1a814185
 AUX kexec-tools-2.0.0-respect-LDFLAGS.patch 290 RMD160 d49f079dc270d602f7f7802ec56ee2fe867da359 SHA1 8d65add25fee582433b08e5cd09018e2efbe55e8 SHA256 c815c53eebcfddd687cefcaa835b604b489f14410bbd4c524e845cf31c69fa15
 AUX kexec.conf 397 RMD160 a366158ef7a24764c7e42bd0a246e035587d0c42 SHA1 46760b27c210c7514a86f9d2f2b35b3ffc5f9d90 SHA256 59bd15f8a0be3a41a457e61cfbb3520252773ed6422b9b223b347dfeb54f152a
 AUX kexec.init 2115 RMD160 ecd6acfb42923fdc0bfb8f094e5a212a5926b59d SHA1 da5c950250700bc50c35d77a64b689059f72f07a SHA256 6dae3ca906749857d372359431d5ceccc4047dbacb975b988dbcd81cacf1f919
-DIST kexec-tools-2.0.0.tar.bz2 262331 RMD160 88b8e0cf6fc7772f5f5d63536996f6afe67c2232 SHA1 5e822216553258c788480984cd214f7d13b212ca SHA256 41439d49957d0400c7bd9e26b7573049025133cb5edac18c1eb08993953e2044
 DIST kexec-tools-2.0.1.tar.bz2 269432 RMD160 42726138bcd4342df768f41d0aef4e003c2a2090 SHA1 d3711794a2161bb88c75b74b5d6b41596e505b25 SHA256 f61f7be8896d4e3ee788712c564296bcb431e2e0b0564cc14b40a81b6df8d311
-EBUILD kexec-tools-2.0.0-r1.ebuild 993 RMD160 2d68c08d6af398d21ba130d678a8af839b31c915 SHA1 fc674c6db01f294593c511defed7349e5ef56199 SHA256 6d6dcbd1cb48e50b7a72b5629606189d4043dd907c3eea4fb2be4e5ff9196c9b
-EBUILD kexec-tools-2.0.0-r2.ebuild 997 RMD160 eaccc5168b44daef797c30b0e3095057e93cfbf3 SHA1 011d49c1fe27c348ca164f934826f0f8f1a9a933 SHA256 3d8c5ea277b69b4a16d83f36426b5c37534873fb8504d219b80cde97018bf0c8
-EBUILD kexec-tools-2.0.1.ebuild 1028 RMD160 ea0a72d3b142c3a71515aacdd6317d3ffe7e1ed7 SHA1 b3bba4beb0853c2bc17bf331d347abe81296bdfb SHA256 dcdc2b82f5ded268f7f5e966c795bda2d67b4537c78c2561fa8922417d77c644
-EBUILD kexec-tools-9999.ebuild 965 RMD160 d8352bef2a700ff169d82b1a7f3081cbd8b32814 SHA1 7c0f4c1ca0a2fde7b6b932040252616d618edb45 SHA256 1482ab267103c9a27a9d45b3525adccc6e54397a0859947ab3c0ad8aaa0b135c
-MISC ChangeLog 6978 RMD160 4374d514424dc03396ded643c62fbf6dcaaac8b1 SHA1 272ad76285a422af0a41095d482f2bff0b62407f SHA256 0655d6b339b213238f8a24bb9e9b79109cbcb0abfdf54bbd969a192362f7a538
+EBUILD kexec-tools-2.0.1.ebuild 1125 RMD160 1a75facad88eabee300faa3cc44e33417baeb197 SHA1 a24b5dede04fa7a43d8a06c1156fb1f1160ae110 SHA256 923a4b2d9c38f93ea8e0df8974afcb09621de510348ed667758069323c57baf9
+EBUILD kexec-tools-9999.ebuild 1062 RMD160 9063e941c289c36d2f3add81227e140203222101 SHA1 15d2c67e93da8d08e362888f280456b8ea740795 SHA256 dab49c025f68e97d360ff334c00db965c6bb55fbc3b87640f6527a929ca72a78
+MISC ChangeLog 7301 RMD160 0f0f690dabba4b1a7bf43810658f21a6f0983edd SHA1 e815d76f5234edec016cae20e555de3b05f9a5fd SHA256 9d883584e716f4821fa48761bbac423a07bacb660429c7c77bd7568be4b8734b
 MISC metadata.xml 317 RMD160 199bfdf7ca592ea70bfaf830c17300d252cbf3a6 SHA1 e681cd2f0685e1e3325b7b350b78e49d144070f6 SHA256 63d6d7e1e0ba930dc69ae78e9df7a03965c2a0534af7222929a69e80978000d8
