@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/kexec-tools/ChangeLog,v 1.32 2010/03/28 04:01:58 darkside Exp $
 
+  07 Apr 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> -kexec-tools-2.0.0-r1.ebuild,
+  -kexec-tools-2.0.0-r2.ebuild, kexec-tools-2.0.1.ebuild,
+  kexec-tools-9999.ebuild:
+  Drop old ebuilds. Set ASFLAGS to CCASFLAGS to conform to autoconf's de
+  facto standard which is not respected by GNU Make.
+
   28 Mar 2010; Jeremy Olexa <darkside@gentoo.org> metadata.xml:
   Drop myself from metadata, add maintainer-needed
 
